language/move-lang/tests/move_check/expansion/public_friend_main.move
script {
public(friend) fun main() {
}
}
